Created factory method and changed the validations of update